--- a/type-lists/model.yaml
+++ b/type-lists/model.yaml
@@ -14,6 +14,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: model/iges
+  friendly: Initial Graphics Exchange Specification (IGES)
   encoding: base64
   extensions:
   - igs
@@ -30,6 +31,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: model/mesh
+  friendly: Mesh Data Type
   encoding: base64
   extensions:
   - msh
@@ -44,6 +46,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: model/vnd.collada+xml
+  friendly: COLLADA
   encoding: base64
   extensions:
   - dae
@@ -59,6 +62,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: model/vnd.dwf
+  friendly: Autodesk Design Web Format (DWF)
   encoding: base64
   extensions:
   - dwf
@@ -87,6 +91,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: model/vnd.gdl
+  friendly: Geometric Description Language (GDL)
   encoding: base64
   extensions:
   - gdl
@@ -115,6 +120,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: model/vnd.gtw
+  friendly: Gen-Trix Studio
   encoding: base64
   extensions:
   - gtw
@@ -143,6 +149,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: model/vnd.mts
+  friendly: Virtue MTS
   encoding: base64
   extensions:
   - mts
@@ -216,6 +223,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: model/vnd.vtu
+  friendly: Virtue VTU
   encoding: base64
   extensions:
   - vtu
@@ -231,6 +239,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: model/vrml
+  friendly: Virtual Reality Modeling Language
   encoding: base64
   extensions:
   - wrl
