--- a/type-lists/text.yaml
+++ b/type-lists/text.yaml
@@ -32,6 +32,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/calendar
+  friendly: iCalendar
   encoding: quoted-printable
   extensions:
   - ics
@@ -54,6 +55,7 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: text/css
+  friendly: Cascading Style Sheets (CSS)
   encoding: 8bit
   extensions:
   - css
@@ -66,6 +68,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/csv
+  friendly: Comma-Seperated Values
   encoding: 8bit
   extensions:
   - csv
@@ -186,6 +189,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/html
+  friendly: HyperText Markup Language (HTML)
   encoding: 8bit
   extensions:
   - html
@@ -249,6 +253,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/n3
+  friendly: Notation3
   encoding: quoted-printable
   extensions:
   - n3
@@ -289,6 +294,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/plain
+  friendly: Text File
   encoding: quoted-printable
   extensions:
   - txt
@@ -352,6 +358,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/prs.lines.tag
+  friendly: PRS Lines Tag
   encoding: quoted-printable
   extensions:
   - dsc
@@ -400,6 +407,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/richtext
+  friendly: Rich Text Format (RTF)
   encoding: 8bit
   extensions:
   - rtx
@@ -468,6 +476,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/sgml
+  friendly: Standard Generalized Markup Language (SGML)
   encoding: quoted-printable
   extensions:
   - sgml
@@ -494,6 +503,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/tab-separated-values
+  friendly: Tab Seperated Values
   encoding: quoted-printable
   extensions:
   - tsv
@@ -509,6 +519,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/troff
+  friendly: troff
   encoding: 8bit
   extensions:
   - t
@@ -527,6 +538,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/turtle
+  friendly: Turtle (Terse RDF Triple Language)
   encoding: quoted-printable
   extensions:
   - ttl
@@ -557,6 +569,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/uri-list
+  friendly: URI Resolution Services
   encoding: quoted-printable
   extensions:
   - uri
@@ -610,6 +623,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/vnd.curl
+  friendly: Curl - Applet
   encoding: quoted-printable
   extensions:
   - curl
@@ -625,18 +639,21 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/vnd.curl.dcurl
+  friendly: Curl - Detached Applet
   encoding: quoted-printable
   extensions:
   - dcurl
   registered: false
 - !ruby/object:MIME::Type
   content-type: text/vnd.curl.mcurl
+  friendly: Curl - Manifest File
   encoding: quoted-printable
   extensions:
   - mcurl
   registered: false
 - !ruby/object:MIME::Type
   content-type: text/vnd.curl.scurl
+  friendly: Curl - Source Code
   encoding: quoted-printable
   extensions:
   - scurl
@@ -706,6 +723,7 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: text/vnd.fly
+  friendly: mod_fly / fly.cgi
   encoding: quoted-printable
   extensions:
   - fly
@@ -721,6 +739,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/vnd.fmi.flexstor
+  friendly: FLEXSTOR
   encoding: quoted-printable
   extensions:
   - flx
@@ -736,6 +755,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/vnd.graphviz
+  friendly: Graphviz
   encoding: quoted-printable
   extensions:
   - gv
@@ -751,6 +771,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/vnd.in3d.3dml
+  friendly: In3D - 3DML
   encoding: quoted-printable
   extensions:
   - 3dml
@@ -766,6 +787,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/vnd.in3d.spot
+  friendly: In3D - 3DML
   encoding: quoted-printable
   extensions:
   - spot
@@ -888,6 +910,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/vnd.sun.j2me.app-descriptor
+  friendly: J2ME App Descriptor
   encoding: 8bit
   extensions:
   - jad
@@ -946,6 +969,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/vnd.wap.wml
+  friendly: Wireless Markup Language (WML)
   encoding: quoted-printable
   extensions:
   - wml
@@ -961,6 +985,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/vnd.wap.wmlscript
+  friendly: Wireless Markup Language Script (WMLScript)
   encoding: quoted-printable
   extensions:
   - wmls
@@ -976,6 +1001,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: text/x-asm
+  friendly: Assembler Source File
   encoding: quoted-printable
   extensions:
   - asm
@@ -983,6 +1009,7 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: text/x-c
+  friendly: C Source File
   encoding: quoted-printable
   extensions:
   - c
@@ -1007,6 +1034,7 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: text/x-fortran
+  friendly: Fortran Source File
   encoding: quoted-printable
   extensions:
   - f
@@ -1016,6 +1044,7 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: text/x-java-source
+  friendly: Java Source File
   encoding: quoted-printable
   extensions:
   - java
@@ -1034,6 +1063,7 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: text/x-pascal
+  friendly: Pascal Source File
   encoding: quoted-printable
   extensions:
   - p
@@ -1050,6 +1080,7 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: text/x-setext
+  friendly: Setext
   encoding: quoted-printable
   extensions:
   - etx
@@ -1062,18 +1093,21 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: text/x-uuencode
+  friendly: UUEncode
   encoding: quoted-printable
   extensions:
   - uu
   registered: false
 - !ruby/object:MIME::Type
   content-type: text/x-vcalendar
+  friendly: vCalendar
   encoding: 8bit
   extensions:
   - vcs
   registered: false
 - !ruby/object:MIME::Type
   content-type: text/x-vcard
+  friendly: vCard
   encoding: 8bit
   extensions:
   - vcf
