--- a/type-lists/audio.yaml
+++ b/type-lists/audio.yaml
@@ -72,6 +72,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/adpcm
+  friendly: Adaptive differential pulse-code modulation
   encoding: base64
   extensions:
   - adp
@@ -196,6 +197,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/basic
+  friendly: Sun Audio - Au file format
   encoding: base64
   extensions:
   - au
@@ -896,6 +898,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/midi
+  friendly: MIDI - Musical Instrument Digital Interface
   encoding: base64
   extensions:
   - kar
@@ -918,6 +921,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/mp4
+  friendly: MPEG-4 Audio
   encoding: base64
   extensions:
   - mp4
@@ -980,6 +984,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/mpeg
+  friendly: MPEG Audio
   encoding: base64
   extensions:
   - mpga
@@ -1017,6 +1022,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/ogg
+  friendly: Ogg Audio
   encoding: base64
   extensions:
   - oga
@@ -1490,6 +1496,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/vnd.dece.audio
+  friendly: DECE Audio
   encoding: base64
   extensions:
   - uva
@@ -1506,6 +1513,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/vnd.digital-winds
+  friendly: Digital Winds Music
   encoding: 7bit
   extensions:
   - eol
@@ -1638,6 +1646,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/vnd.dra
+  friendly: DRA Audio
   encoding: base64
   extensions:
   - dra
@@ -1653,6 +1662,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/vnd.dts
+  friendly: DTS Audio
   encoding: base64
   extensions:
   - dts
@@ -1668,6 +1678,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/vnd.dts.hd
+  friendly: DTS High Definition Audio
   encoding: base64
   extensions:
   - dtshd
@@ -1724,6 +1735,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/vnd.lucent.voice
+  friendly: Lucent Voice
   encoding: base64
   extensions:
   - lvp
@@ -1739,6 +1751,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/vnd.ms-playready.media.pya
+  friendly: Microsoft PlayReady Ecosystem
   encoding: base64
   extensions:
   - pya
@@ -1784,6 +1797,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/vnd.nuera.ecelp4800
+  friendly: Nuera ECELP 4800
   encoding: base64
   extensions:
   - ecelp4800
@@ -1799,6 +1813,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/vnd.nuera.ecelp7470
+  friendly: Nuera ECELP 7470
   encoding: base64
   extensions:
   - ecelp7470
@@ -1814,6 +1829,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/vnd.nuera.ecelp9600
+  friendly: Nuera ECELP 9600
   encoding: base64
   extensions:
   - ecelp9600
@@ -1872,6 +1888,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/vnd.rip
+  friendly: Hit'n'Mix
   encoding: base64
   extensions:
   - rip
@@ -1943,6 +1960,7 @@
   registered: true
 - !ruby/object:MIME::Type
   content-type: audio/webm
+  friendly: Open Web Media Project - Audio
   encoding: base64
   extensions:
   - weba
@@ -1952,12 +1970,14 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: audio/x-aac
+  friendly: Advanced Audio Coding (AAC)
   encoding: base64
   extensions:
   - aac
   registered: false
 - !ruby/object:MIME::Type
   content-type: audio/x-aiff
+  friendly: Audio Interchange File Format
   encoding: base64
   extensions:
   - aif
@@ -1992,18 +2012,21 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: audio/x-mpegurl
+  friendly: M3U (Multimedia Playlist)
   encoding: base64
   extensions:
   - m3u
   registered: false
 - !ruby/object:MIME::Type
   content-type: audio/x-ms-wax
+  friendly: Microsoft Windows Media Audio Redirector
   encoding: base64
   extensions:
   - wax
   registered: false
 - !ruby/object:MIME::Type
   content-type: audio/x-ms-wma
+  friendly: Microsoft Windows Media Audio
   encoding: base64
   extensions:
   - wma
@@ -2016,6 +2039,7 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: audio/x-pn-realaudio
+  friendly: Real Audio Sound
   encoding: base64
   extensions:
   - ra
@@ -2023,6 +2047,7 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: audio/x-pn-realaudio-plugin
+  friendly: Real Audio Sound
   encoding: base64
   extensions:
   - rmp
@@ -2036,6 +2061,7 @@
   registered: false
 - !ruby/object:MIME::Type
   content-type: audio/x-wav
+  friendly: Waveform Audio File Format (WAV)
   encoding: base64
   extensions:
   - wav
