--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ rvm:
 matrix:
   allow_failures:
     - rvm: rbx-2
+    - rvm: jruby-head
+    - rvm: ruby-head
 gemfile:
   - Gemfile
 before_script:
